src/css/default.css
/* 
    Document   : main
    Created on : Sep 20, 2010, 7:54:25 PM
    Author     : vitex
    Description: main css
*/

@font-face {
    font-family: 'Lobster';
    src: url('lobster1.4-webfont.eot');
    src: url('lobster1.4-webfont.eot?#iefix') format('embedded-opentype'),
        url('lobster1.4-webfont.woff') format('woff'),
        url('lobster1.4-webfont.ttf') format('truetype'),
        url('lobster1.4-webfont.svg#lobster_1.4regular') format('svg');
    font-weight: normal;
    font-style: normal;

}

body {
    background: #f5f6f8;
}

.avatar { width: 100px; }

a { margin-top: 2px;  }

.item img { margin-left: 200px; }

h2 { font-style: italic; }

code { font-size: 9px; font-weight: bolder; }

#heroUnit { text-align: center; padding: 10px; }

.carousel-caption { background: rgba(0,0,0, 0.9); border: 1px springgreen solid;  }

.item { text-align: center; 
        margin-left: auto;
        margin-right: auto; }

.ribbon {
    top: 3.2em;
    right: -3.7em;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    color:#fff;
    display: block;
    padding: .6em 3.5em;
    position: fixed;
    text-align: center;
    text-decoration: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    z-index: 100000;
}

.bg-teal {
    background-color: #39cccc; }

.nav-tabs { font-family: "Lobster",cursive; font-size: 1.5em; }


.btn-center{
    width: 50%;
    text-align: center;
    margin: inherit;
}

.social-login-btn {
    margin: 5px;
    width: 10%;
    padding: 0;
}

.social-google {
    background-color: #da573b;
    border-color: #be5238;
}
.social-google:hover{
    background-color: #be5238;
    border-color: #9b4631;
}

.social-twitter {
    background-color: #1daee3;
    border-color: #3997ba;
}
.social-twitter:hover {
    background-color: #3997ba;
    border-color: #347b95;
}

.social-facebook {
    background-color: #4c699e;
    border-color: #47618d;
}
.social-facebook:hover {
    background-color: #47618d;
    border-color: #3c5173;
}

.social-linkedin {
    background-color: #4875B4;
    border-color: #466b99;
}
.social-linkedin:hover {
    background-color: #466b99;
    border-color: #3b5a7c;
}

.social-github {
    background-color: #000000;
    border-color: #466b99;
}
.social-github:hover {
    background-color: #1e1b1d;
    border-color: #111111;
}

.mpicon { width: 150px; height: 150px;}

#packs th {cursor:n-resize;}

.debicon {
    height: 20px;
}

.debicon:hover {
    height: 100px;
}

.installs {
    border:1px solid gray;
    background: -webkit-linear-gradient(left, black 50%, white 50%);
    background: -moz-linear-gradient(left, black 50%, white 50%);
    background: -ms-linear-gradient(left, black 50%, white 50%);
    background: linear-gradient(left, black 50%, white 50%);
}

.gha-gravatar { width: 100px; }

.mp-menu-item {
    margin-bottom: 10px;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
    border: 0;
}

/* Carousel prev/next controls: keep them narrow and click-through so they
   stop covering the package icon/links sitting under the full-height strip. */
.carousel-control-prev,
.carousel-control-next {
    width: 3rem;
    pointer-events: none;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    pointer-events: auto;
}

@media (max-width: 767.98px) {
    /* Stack the package icon above the text instead of squeezing it into
       a fixed 100px-wide column next to the description. */
    .mp-menu-item .d-flex.align-items-stretch {
        flex-direction: column;
    }

    .mp-menu-item .flex-shrink-0 {
        width: 100% !important;
        border-right: 0 !important;
        border-bottom: 1px solid #dee2e6;
    }
}

